--- a/action.yml
+++ b/action.yml
@@ -143,7 +143,7 @@ runs:
       name: Install valint
       run: |2-
         if [ ! -e "$HOME/.scribe/bin/valint" ]; then
-        	curl -sSfL https://get.scribesecurity.com/install.sh  | sh -s -- -t valint -D
+        	curl -sSfL https://get.scribesecurity.com/install.sh  | sh -s -- -t valint:v1.4.1
         fi
     - shell: bash
       name: Run valint command
