--- a/action.yml
+++ b/action.yml
@@ -131,6 +131,7 @@ runs:
       run: |-
         $HOME/.scribe/bin/valint \
         slsa \
+        ${{ inputs.target }} \
         ${{ inputs.all-env && '--all-env=' }}${{ inputs.all-env }} \
         ${{ inputs.attest-config && '--attest.config=' }}${{ inputs.attest-config }} \
         ${{ inputs.attest-default && '--attest.default=' }}${{ inputs.attest-default }} \
